# vibrantine-base-coder

./: .gitignore  AGENTS.md  BRIEF.md  LICENSE  README.md  pyproject.toml
docs/: base-coder-design-reference.md  coding-orchestrator-design-reference.md
docs/reference/: vibrantine-authoring.md  vibrantine-readme.md
evals/: .env.example  README.md
evals/fixtures/localized-defect/: calculator.py  test_calculator.py
evals/prompts/: verification-emphasis.md
evals/suites/: localized-defect.toml
src/vibrantine_base_coder/: __init__.py  cli.py  commission.py  eval_cli.py  evaluation.py  models.py  runtime.py
src/vibrantine_base_coder/prompts/: system.md
tests/: test_cli.py  test_commission.py  test_evaluation.py  test_models.py  test_runtime.py
